# cipher-bench

./: Cargo.toml  README.md
cipher_bench/: Cargo.toml
cipher_bench/src/: aead.rs  block.rs  lib.rs
nettle/: Cargo.toml  build.rs
nettle/benches/: aead.rs  block.rs
nettle/bindings/: aead.h  block.h
nettle/src/: aead.rs  block.rs  lib.rs
openssl/: Cargo.toml  build.rs
openssl/benches/: aead.rs  block.rs
openssl/bindings/: evp.h
openssl/src/: aead.rs  block.rs  evp.rs  lib.rs
