[package]
name = "nettle"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cipher_bench = { path = "../cipher_bench" }

[build-dependencies]
bindgen = "0.53.1"

[dev-dependencies]
rand = "0"
criterion = "0.3"

[[bench]]
name = "block"
harness = false

[[bench]]
name = "aead"
harness = false
